--- a/compose.yml
+++ b/compose.yml
@@ -44,7 +44,9 @@ services:
       - GCP_PROJECT=bazalt-89939
       - RDB_EMULATOR_PORT=9005
   backend:
-    build: https://github.com/Nihuaway/Bazalt#master:backend
+    build:
+      - context: https://github.com/Nihuaway/Bazalt#master:backend
+      - dockerfile: https://github.com/Nihuaway/Bazalt#master:backend/Dockerfile
     ports:
       - 8000:8000
     image: backend
