Рассылка по почте снова работает

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,3 @@
-NODE_ENV=development
-
 PORT=8000
 URL=http://localhost
 CLIENT_URL=http://localhost:3000
@@ -18,6 +16,10 @@ MINIO_USESSL=true
 MINIO_ACCESSKEY=root1234
 MINIO_SECRETKEY=root1234
 
-REDIS_URL=redis
+REDIS_URL=localhost
 REDIS_PORT=6379
 
+EMAIL_HOST=smtp.mail.ru
+EMAIL_PORT=587
+EMAIL_AUTH_USER=bazalt.messenger@mail.ru
+EMAIL_AUTH_PASS=Q2cdxH4vmXPYCzkRTx49
