--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "emailjs": "^4.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-socket.io-session": "^1.3.5",
@@ -36,6 +37,7 @@
     "npm-check": "^6.0.1",
     "redis": "^4.6.7",
     "redis-om": "^0.4.2",
+    "sendmail": "^1.6.1",
     "sharp": "^0.32.4",
     "socket.io": "^4.7.2",
     "ws": "^8.12.0"
