--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.4.0",
     "crypto": "^1.0.1",
     "framer-motion": "^10.16.2",
     "next": "latest",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.3",
     "socket.io-client": "^4.7.2",
     "socket.io-stream": "^0.9.1",
     "styled-components": "^6.0.7",
