--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -4,6 +4,7 @@
 		"moduleResolution": "Node",
 		"target": "ES2020",
 		"jsx": "react",
+		"checkJs": false,
 		"strictNullChecks": true,
 		"strictFunctionTypes": true,
 		"plugins": [
