--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "socket.io-client": "^4.7.2",
     "socket.io-stream": "^0.9.1",
