Small changes in file structure

--- a/backend/jsconfig.json
+++ b/backend/jsconfig.json
@@ -66,6 +66,9 @@
             "#attachment/*": [
                 "./src/chats/messages/attachment/*"
             ],
+            "#crypto/*": [
+                "./src/classes/crypto/*"
+            ],
         }
     },
     "exclude": [
