--- a/backend/jsconfig.json
+++ b/backend/jsconfig.json
@@ -3,75 +3,29 @@
         "baseUrl": ".",
         "target": "es5",
         "paths": {
-            "#config": [
-                "./config/*"
-            ],
-            "#errorHandler": [
-                "./src/handlers/errorHandler.js"
-            ],
-            "#database/*": [
-                "./src/database/*"
-            ],
-            "#functions/*": [
-                "./src/functions/*"
-            ],
-            "#middlewares/*": [
-                "./src/middlewares/*"
-            ],
-            "#auth/*": [
-                "./src/auth/*"
-            ],
-            "#session/*": [
-                "./src/auth/session/*"
-            ],
-            "#socket/*": [
-                "./src/auth/socket/*"
-            ],
-            "#restoreToken/*": [
-                "./src/auth/restoreToken/*"
-            ],
-            "#activateToken/*": [
-                "./src/auth/activateToken/*"
-            ],
-            "#user/*": [
-                "./src/user/*"
-            ],
-            "#avatar/*": [
-                "./src/user/avatar/*"
-            ],
-            "#online/*": [
-                "./src/user/online/*"
-            ],
-            "#password/*": [
-                "./src/user/password/*"
-            ],
-            "#email/*": [
-                "./src/user/email/*"
-            ],
-            "#members/*": [
-                "./src/chats/members/*"
-            ],
-            "#chats/*": [
-                "./src/chats/*"
-            ],
-            "#messages/*": [
-                "./src/chats/messages/*"
-            ],
-            "#messages_app/*": [
-                "./src/chats/messages/messages_app/*"
-            ],
-            "#handlers/*": [
-                "./src/handlers/*"
-            ],
-            "#attachment/*": [
-                "./src/chats/messages/attachment/*"
-            ],
-            "#crypto/*": [
-                "./src/classes/crypto/*"
-            ],
+            "#config": ["./config/*"],
+            "#errorHandler": ["./src/handlers/errorHandler.js"],
+            "#database/*": ["./src/database/*"],
+            "#functions/*": ["./src/functions/*"],
+            "#middlewares/*": ["./src/middlewares/*"],
+            "#auth/*": ["./src/auth/*"],
+            "#session/*": ["./src/auth/session/*"],
+            "#socket/*": ["./src/auth/socket/*"],
+            "#restoreToken/*": ["./src/auth/restoreToken/*"],
+            "#activateToken/*": ["./src/auth/activateToken/*"],
+            "#user/*": ["./src/user/*"],
+            "#avatar/*": ["./src/user/avatar/*"],
+            "#online/*": ["./src/user/online/*"],
+            "#password/*": ["./src/user/password/*"],
+            "#email/*": ["./src/user/email/*"],
+            "#members/*": ["./src/chats/members/*"],
+            "#chats/*": ["./src/chats/*"],
+            "#messages/*": ["./src/chats/messages/*"],
+            "#messages_app/*": ["./src/chats/messages/messages_app/*"],
+            "#handlers/*": ["./src/handlers/*"],
+            "#attachment/*": ["./src/chats/messages/attachment/*"],
+            "#crypto/*": ["./src/classes/crypto/*"]
         }
     },
-    "exclude": [
-        "node_modules"
-    ],
+    "exclude": ["node_modules"]
 }
